@@ -339,7 +339,7 @@ public final class CC implements Externalizable {
 	 *         <code>new ComponentConstraint().noGrid().gap().fill()</code>.
 	 */
 	public final CC growX(float w) {
-		hor.setGrow(new Float(w));
+		hor.setGrow(Float.valueOf(w));
 		return this;
 	}
 
@@ -419,7 +419,7 @@ public final class CC implements Externalizable {
 	 *         <code>new ComponentConstraint().noGrid().gap().fill()</code>.
 	 */
 	public final CC shrinkX(float w) {
-		hor.setShrink(new Float(w));
+		hor.setShrink(Float.valueOf(w));
 		return this;
 	}
 
@@ -706,7 +706,7 @@ public final class CC implements Externalizable {
 	 *         <code>new ComponentConstraint().noGrid().gap().fill()</code>.
 	 */
 	public final CC shrinkY(float w) {
-		ver.setShrink(new Float(w));
+		ver.setShrink(Float.valueOf(w));
 		return this;
 	}
 
